blockml/test/valid/13_filter_expressions/v31/v31_one.view
view: v31_one
table: 1
fields:

- dimension: dim1
  result: number
  sql: 111

- dimension: dim2
  result: number
  sql: 222

- dimension: dim3
  result: number
  sql: 333

- dimension: dim6
  sql: 600


