blockml/test/errors/07_model_sql_always_where/e245/e245_one.view
view: e245_one
table: 1
fields:
- filter: f1
  result: number
